PharmaDemo/src/objects/Additional_Business_Plan_Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Add_Contacts__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BusinessPlanAddContacts?id=&quot;&amp;Business_Plan__r.Id &amp; &quot;&amp;accountid=&quot; &amp;  Organisation__r.Id  , IMAGE(&quot;/img/icon/forecasts16.gif&quot;,&quot;Add Contacts from this Organisation&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <label>Business Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>R00Nj0000003oDM5EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <formula>Organisation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00Nj0000003oDM7EAM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Business Plan Organisation</label>
    <nameField>
        <label>Organisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plan Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>